Update interface + Ajout bouton ordonnance

--- a/interface client/style.css
+++ b/interface client/style.css
@@ -7,9 +7,8 @@ Ligne 198 : Liste des patients
 Ligne 258 : barre de recherche
 */
 
-/* ------------ Navbar ------------ */
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
 
+/* Déclaration de variable : */
 :root {
     --header-height: 3rem;
     --nav-width: 68px;
@@ -20,6 +19,10 @@ Ligne 258 : barre de recherche
     --normal-font-size: 1rem;
     --z-fixed: 100
 }
+
+/* ------------ Navbar ------------ */
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
+
 
 *,
 ::before,
@@ -61,18 +64,6 @@ a {
     cursor: pointer
 }
 
-.header_img {
-    width: 35px;
-    height: 35px;
-    display: flex;
-    justify-content: center;
-    border-radius: 50%;
-    overflow: hidden
-}
-
-.header_img img {
-    width: 40px
-}
 
 .l-navbar {
     position: fixed;
@@ -168,15 +159,6 @@ a {
         padding: 0 2rem 0 calc(var(--nav-width) + 0.5rem)
     }
 
-    .header_img {
-        width: 40px;
-        height: 40px
-    }
-
-    .header_img img {
-        width: 45px
-    }
-
     .l-navbar {
         left: 0;
         padding: 1rem 1rem 0 0
@@ -190,9 +172,6 @@ a {
         padding-left: calc(var(--nav-width) + 250px)
     }
 }
-
-
-
 
 /* ------------ Liste des patients ------------ */
 .table100.ver1 {
