--- a/Backend/views/patient.ejs
+++ b/Backend/views/patient.ejs
@@ -13,7 +13,7 @@ Utilité : Affichage de la liste des patients
       <!-- ================= NAVBAR DÉPENDENCE ================= -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-      <link rel="stylesheet" href="http://itcore.fr/style.css">
+      <link rel="stylesheet" href="/style.css">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
       <script src="http://itcore.fr/nav.js"></script>
       <!-- ================= FIN NAVBAR DÉPENDENCE ================= -->
