--- a/Backend/views/patient.ejs
+++ b/Backend/views/patient.ejs
@@ -5,18 +5,7 @@ Dernière modification : 23/10/2021
 Utilité : Affichage de la liste des patients
 ----------------------------------------------------------->
 
-<!DOCTYPE html>
-<html lang="fr-FR">
-   <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <!-- ================= NAVBAR DÉPENDENCE ================= -->
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-      <link rel="stylesheet" href="/style.css">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-      <script src="http://itcore.fr/nav.js"></script>
-      <!-- ================= FIN NAVBAR DÉPENDENCE ================= -->
+<%- include('header') %>
 
       <title>Pharmacie Sautheuz | Gestion des patients</title>
    </head>
@@ -69,9 +58,10 @@ Utilité : Affichage de la liste des patients
                 <thead>
                     <tr class="row100 head">
                         <th class="column1">Nom et prénom</th>
-                        <th class="column2">Pathologie</th>
-                        <th class="column3">Numéro de sécurité social</th>
+                        <th class="column2">Numéro de sécurité social</th>
+                        <th class="column3">Date de naissance</th>
                         <th class="column4">En voir plus</th>
+                        <th class="column5"></th>
                     </tr>
                 </thead>
             </table>
@@ -81,21 +71,19 @@ Utilité : Affichage de la liste des patients
             <tbody>
                 <tr class="row100 body">
                     <td class="column1">Jon Snow</td>
-                    <td class="column2">La tête à tombé de sont corps</td>
-                    <td class="column3">2430450832145 17</td>
+                    <td class="column2">2430450832145 17</td>
+                    <td class="column3">12/05/2014</td>
                     <td class="column4"><button>fiche patient</button></td>
                     <td class="column5"><button>Ajouter ordonnance</button></td>
                 </tr>
                 <tr class="row101 body">
-                    <td class="column1">Jon Snow</td>
-                    <td class="column2">La tête à tombé de sont corps</td>
-                    <td class="column3">2430450832145 17</td>
+                    <td class="column1">Rick Grayms</td>
+                    <td class="column2">2430450832146 18</td>
+                    <td class="column3">22/12/2020</td>
                     <td class="column4"><button>fiche patient</button></td>
                     <td class="column5"><button>Ajouter ordonnance</button></td>
                 </tr>
             </tbody>
             </table>
-            </div>
-      </div>
-      <!-- ================= FIN DU CONTENEUR =================-->
-</html>
+
+<%- include('footer') %>
