--- a/Backend/views/stock.ejs
+++ b/Backend/views/stock.ejs
@@ -5,18 +5,7 @@ Dernière modification : 23/10/2021
 Utilité : Affichage de la liste des stocks
 ----------------------------------------------------------->
 
-<!DOCTYPE html>
-<html lang="fr-FR">
-   <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <!-- ================= NAVBAR DÉPENDENCE ================= -->
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-      <link rel="stylesheet" href="/style.css">
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-      <script src="/nav.js"></script>
-      <!-- ================= FIN NAVBAR DÉPENDENCE ================= -->
+<%- include('header') %>
 
       <title>Pharmacie Sautheuz | Gestion des Stocks</title>
    </head>
@@ -97,7 +86,5 @@ Utilité : Affichage de la liste des stocks
                 </tr>
             </tbody>
             </table>
-            </div>
-      </div>
-      <!-- ================= FIN DU CONTENEUR =================-->
-</html>
+
+<%- include('footer') %>
