Correction des bugs, et ajouts des liens pour les href des boutons 'gestion'

--- a/Backend/views/menu.ejs
+++ b/Backend/views/menu.ejs
@@ -19,7 +19,7 @@
                   <div class="col-lg-6">
                     <div class="card-body p-md-5 mx-md-4">
                       <div class="text-center">
-                        <img src="logo.png" style="width: 180px;" alt="logo">
+                        <img src="/logo.png" style="width: 180px;" alt="logo">
                         <h4 class="mt-1 mb-5 pb-1">Menu Pharmacie Sautheuz</h4>
                       </div>
                         <p>Que voulez-vous faire ?</p>
