--- a/Backend/views/patient.ejs
+++ b/Backend/views/patient.ejs
@@ -42,9 +42,9 @@ Utilité : Affichage de la liste des patients
                     <i class='bx bx-user nav_icon'></i> 
                     <span class="nav_name">Ajouter un nouveau patient</span> 
                   </a> 
-                   <a href="#" class="nav_link"> <i class='bx bx-bookmark nav_icon'></i> 
-                  <span class="nav_name">Gestion des stocks</span> </a> <a href="#" class="nav_link"> 
-                  </a> 
+                   <a href="http://localhost:3000/PharmaScieSauteuse/Gestion-de-Stock" class="nav_link"> <i class='bx bx-bookmark nav_icon'></i> 
+                  <span class="nav_name">Gestion des stocks</span> 
+                </a>
                </div>
             </div>
          </nav>
