--- a/Backend/views/stock.ejs
+++ b/Backend/views/stock.ejs
@@ -34,7 +34,7 @@ Utilité : Affichage de la liste des stocks
                <span class="nav_logo-name">Pharmacie Sautheuz</span> 
                </a>
                <div class="nav_list"> 
-                  <a href="#" class="nav_link"> 
+                  <a href="http://localhost:3000/PharmaScieSauteuse/Gestion-de-Patient" class="nav_link"> 
                   <i class='bx bx-grid-alt nav_icon'></i> 
                   <span class="nav_name">Gestion des patients</span> 
                   </a> 
@@ -42,10 +42,10 @@ Utilité : Affichage de la liste des stocks
                   <i class='bx bx-user nav_icon'></i> 
                   <span class="nav_name">Ajouter un nouveau patient</span> 
                   </a> 
-                  <a href="#" class="nav_link active"> 
-                      <i class='bx bx-bookmark nav_icon'></i> 
-                  <span class="nav_name">Gestion des stocks</span> 
-                </a>  
+                    <a href="#" class="nav_link active"> 
+                        <i class='bx bx-bookmark nav_icon'></i> 
+                        <span class="nav_name">Gestion des stocks</span> 
+                    </a>  
                </div>
             </div>
          </nav>
