--- a/Backend/views/patient.ejs
+++ b/Backend/views/patient.ejs
@@ -29,7 +29,7 @@ Utilité : Affichage de la liste des patients
       <div class="l-navbar" id="nav-bar">
          <nav class="nav">
             <div>
-               <a href="#" class="nav_logo"> 
+               <a href="http://localhost:3000/PharmaScieSauteuse" class="nav_logo"> 
                <i class='bx bx-heart nav_logo-icon'></i> 
                <span class="nav_logo-name">Pharmacie Sautheuz</span> 
                </a>
@@ -69,6 +69,8 @@ Utilité : Affichage de la liste des patients
             <div class="table100-body">
             <table>
             <tbody>
+                
+
                 <tr class="row100 body">
                     <td class="column1">Jon Snow</td>
                     <td class="column2">2430450832145 17</td>
@@ -76,6 +78,7 @@ Utilité : Affichage de la liste des patients
                     <td class="column4"><button>fiche patient</button></td>
                     <td class="column5"><button>Ajouter ordonnance</button></td>
                 </tr>
+
                 <tr class="row101 body">
                     <td class="column1">Rick Grayms</td>
                     <td class="column2">2430450832146 18</td>
