--- a/Backend/views/stock.ejs
+++ b/Backend/views/stock.ejs
@@ -29,7 +29,7 @@ Utilité : Affichage de la liste des stocks
       <div class="l-navbar" id="nav-bar">
          <nav class="nav">
             <div>
-               <a href="#" class="nav_logo"> 
+               <a href="http://localhost:3000/PharmaScieSauteuse" class="nav_logo"> 
                <i class='bx bx-heart nav_logo-icon'></i> 
                <span class="nav_logo-name">Pharmacie Sautheuz</span> 
                </a>
