--- a/Backend/public/style.css
+++ b/Backend/public/style.css
@@ -123,7 +123,7 @@ a {
     font-size: 1.25rem
 }
 
-.show {
+.show2 {
     left: 0
 }
 
@@ -164,7 +164,7 @@ a {
         padding: 1rem 1rem 0 0
     }
 
-    .show {
+    .show2 {
         width: calc(var(--nav-width) + 240px)
     }
 
