--- a/Backend/views/patient.ejs
+++ b/Backend/views/patient.ejs
@@ -71,22 +71,16 @@ Utilité : Affichage de la liste des patients
             <tbody>
 
                 <% patients.forEach(function(patient){ %>
-                <tr class="row100 body">
+                <tr class="body row100">
                     <td class="column1"><%=patient.Nom_Patient%></td>
                     <td class="column2"><%=patient.noSS%></td>
-                    <td class="column3"><%=moment(patient.Date_naissance).subtract(10, 'days').calendar()%></td>
+                    <td class="column3"><%=moment(patient.Date_naissance).calendar()%></td>
                     <td class="column4"><button>fiche patient</button></td>
                     <td class="column5"><button>Ajouter ordonnance</button></td>
                 </tr>
+                
                 <% })%>
-
-                <tr class="row101 body">
-                    <td class="column1">Rick Grayms</td>
-                    <td class="column2">2430450832146 18</td>
-                    <td class="column3">22/12/2020</td>
-                    <td class="column4"><button>fiche patient</button></td>
-                    <td class="column5"><button>Ajouter ordonnance</button></td>
-                </tr>
+                
             </tbody>
             </table>
 
