--- a/Backend/views/menu.ejs
+++ b/Backend/views/menu.ejs
@@ -24,10 +24,10 @@
                       </div>
                         <p>Que voulez-vous faire ?</p>
                         <div class="form-outline mb-4">
-                          <a href="http://localhost:3000/PharmaScieSauteuse/Gestion-de-Patient" class="btn btn-primary btn-block fa-lg gradient-custom-2 form-control">Gestion des patients</a>
+                          <a href="/PharmaScieSauteuse/Gestion-de-Patient" class="btn btn-primary btn-block fa-lg gradient-custom-2 form-control">Gestion des patients</a>
                         </div>
                         <div class="form-outline mb-4">
-                          <a href="http://localhost:3000/PharmaScieSauteuse/Gestion-de-Stock" class="btn btn-primary btn-block fa-lg gradient-custom-2 form-control">Gestion des stocks</a>
+                          <a href="/PharmaScieSauteuse/Gestion-de-Stock" class="btn btn-primary btn-block fa-lg gradient-custom-2 form-control">Gestion des stocks</a>
                         </div>
                     </div>
                   </div>
