--- a/Backend/views/patient.ejs
+++ b/Backend/views/patient.ejs
@@ -29,7 +29,7 @@ Utilité : Affichage de la liste des patients
       <div class="l-navbar" id="nav-bar">
          <nav class="nav">
             <div>
-               <a href="http://localhost:3000/PharmaScieSauteuse" class="nav_logo"> 
+               <a href="/PharmaScieSauteuse" class="nav_logo"> 
                <i class='bx bx-heart nav_logo-icon'></i> 
                <span class="nav_logo-name">Pharmacie Sautheuz</span> 
                </a>
@@ -42,7 +42,7 @@ Utilité : Affichage de la liste des patients
                     <i class='bx bx-user nav_icon'></i> 
                     <span class="nav_name">Ajouter un nouveau patient</span> 
                   </a> 
-                   <a href="http://localhost:3000/PharmaScieSauteuse/Gestion-de-Stock" class="nav_link"> <i class='bx bx-bookmark nav_icon'></i> 
+                   <a href="/PharmaScieSauteuse/Gestion-de-Stock" class="nav_link"> <i class='bx bx-bookmark nav_icon'></i> 
                   <span class="nav_name">Gestion des stocks</span> 
                 </a>
                </div>
