--- a/Backend/views/stock.ejs
+++ b/Backend/views/stock.ejs
@@ -29,12 +29,12 @@ Utilité : Affichage de la liste des stocks
       <div class="l-navbar" id="nav-bar">
          <nav class="nav">
             <div>
-               <a href="http://localhost:3000/PharmaScieSauteuse" class="nav_logo"> 
+               <a href="/PharmaScieSauteuse" class="nav_logo"> 
                <i class='bx bx-heart nav_logo-icon'></i> 
                <span class="nav_logo-name">Pharmacie Sautheuz</span> 
                </a>
                <div class="nav_list"> 
-                  <a href="http://localhost:3000/PharmaScieSauteuse/Gestion-de-Patient" class="nav_link"> 
+                  <a href="/PharmaScieSauteuse/Gestion-de-Patient" class="nav_link"> 
                   <i class='bx bx-grid-alt nav_icon'></i> 
                   <span class="nav_name">Gestion des patients</span> 
                   </a> 
