--- a/Backend/views/stock.ejs
+++ b/Backend/views/stock.ejs
@@ -38,7 +38,7 @@ Utilité : Affichage de la liste des stocks
                   <i class='bx bx-grid-alt nav_icon'></i> 
                   <span class="nav_name">Gestion des patients</span> 
                   </a> 
-                  <a href="#" class="nav_link"> 
+                  <a href="/PharmaScieSauteuse/Formulaire" class="nav_link"> 
                   <i class='bx bx-user nav_icon'></i> 
                   <span class="nav_name">Ajouter un nouveau patient</span> 
                   </a> 
