--- a/Backend/views/formPat.ejs
+++ b/Backend/views/formPat.ejs
@@ -9,7 +9,7 @@
    </head>
    <body>
       <div class="form-style-5">
-         <form action="">
+         <form action="/PharmaScieSauteuse/Formulaire/Test" method="POST">
             <fieldset id="dynamic">
                <legend><span class="number">1</span> Patient :</legend>
                <input type="text" class="field2" id="nom" placeholder="Nom *">
