--- a/Backend/views/formPat.ejs
+++ b/Backend/views/formPat.ejs
@@ -12,11 +12,11 @@
          <form action="/PharmaScieSauteuse/Formulaire/Test" method="POST">
             <fieldset id="dynamic">
                <legend><span class="number">1</span> Patient :</legend>
-               <input type="text" class="field2" id="nom" placeholder="Nom *">
-               <input type="text" class="field2" id="prenom" placeholder="Prénom *">
-               <input type="text" class="field2" id="noSS" placeholder="Numéro de carte vitale *">
-               <input type="text" class="field2" id="pathologie" placeholder="Pathologie *">
-               <input type="text" class="field1" id="traitement" placeholder="Traitement *"><button onclick="newline()">+</button>
+               <input type="text" class="field2" name="nom" placeholder="Nom *">
+               <input type="text" class="field2" name="prenom" placeholder="Prénom *">
+               <input type="text" class="field2" name="noSS" placeholder="Numéro de carte vitale *">
+               <input type="text" class="field2" name="pathologie" placeholder="Pathologie *">
+               <input type="text" class="field1" name="traitement" placeholder="Traitement *"><button onclick="newline()">+</button>
                <script>
                   function newline(){
                      document.getElementById('dynamic').innerHTML += "<input type='text' class='field1' placeholder='Traitement *'>"
@@ -25,13 +25,13 @@
             </fieldset>
             <fieldset>
                <legend><span class="number">2</span> Médecin</legend>
-               <input type="text" class="field2" placeholder="Nom Médecin *">
-               <input type="text" class="field2" placeholder="Prénom Médecin *">
+               <input type="text" class="field2" name="nomMedecin" placeholder="Nom Médecin *">
+               <input type="text" class="field2" name="prenomMedecin" placeholder="Prénom Médecin *">
             </fieldset>
             <fieldset>
                 <legend><span class="number">3</span> Mutuelle</legend>
-                <input type="text" class="field2" placeholder="Nom Mutuelle">
-                <input type="text" class="field2" placeholder="Numéro de Mutuelle">
+                <input type="text" class="field2" name="nomMut" placeholder="Nom Mutuelle">
+                <input type="text" class="field2" name="noMut" placeholder="Numéro de Mutuelle">
              </fieldset>
             <input type="submit" value="Envoyer" />
          </form>
