Ajout des requetes select medicament et assurence

--- a/Backend/views/formPat.ejs
+++ b/Backend/views/formPat.ejs
@@ -84,6 +84,7 @@
                   <legend><span class="number">2</span> Médecin</legend>
                   <label for="mutuel">Nom du médecin :</label>
                   <select class="field2" name="medecin" required>
+                     
                      <option value="id">John DOE</option>
                   </select>
                </fieldset>
@@ -91,7 +92,7 @@
                   <legend><span class="number">3</span> Mutuelle</legend>
                   <label for="mutuel">Nom de la Mutuelle :</label>
                   <select class="field2" name="mutuel">
-                     <option>La mutuel qui déchire</option>
+                     <option value="id">La mutuel qui déchire</option>
                   </select>
                </fieldset>
                <input type="submit" value="Envoyer" />
