--- a/Backend/views/formPat.ejs
+++ b/Backend/views/formPat.ejs
@@ -58,9 +58,11 @@
                   <!-- TRAITEMENT OBLIGATOIRE : -->
                   <div class="align">
                      <select class="field1" name="traitement" id="medic" placeholder="Traitement *" required>
-                        <option value="id">Doliprane</option>
-                        <option value="id">Canabis</option>
-                        <option value="id">Cocaïne</option>
+                        
+                        <% medicaments.forEach(function(medicament){ %>
+                        <option value="<%medicament.idMedic%>"><%medicament.Nom_Medic%></option>
+                        <% }) %>
+
                      </select>
                      <input type="text" class="field1" name="nbBoite" placeholder="Nombre total de boîtes *" required>
                      <input type="text" class="field1" name="duree" placeholder="Durée traitement (mois) *" required>
@@ -84,15 +86,22 @@
                   <legend><span class="number">2</span> Médecin</legend>
                   <label for="mutuel">Nom du médecin :</label>
                   <select class="field2" name="medecin" required>
-                     
-                     <option value="id">John DOE</option>
+
+                     <% medecins.forEach(function(medecin){ %>
+                     <option value="<%medecin.idMede%>"><%medecin.Nom_Mede%></option>
+                     <% }) %>
+
                   </select>
                </fieldset>
                <fieldset>
                   <legend><span class="number">3</span> Mutuelle</legend>
                   <label for="mutuel">Nom de la Mutuelle :</label>
                   <select class="field2" name="mutuel">
-                     <option value="id">La mutuel qui déchire</option>
+
+                     <% assurances.forEach(function(assurance){ %>
+                     <option value="<%assurance.noAssur%>"><%assurance.Nom_Assur%></option>
+                     <% }) %>
+
                   </select>
                </fieldset>
                <input type="submit" value="Envoyer" />
